# idss_phd

./: README.md  pyproject.toml
control_work_1/: notes_and_practice.ipynb
control_work_2/: notes_and_practice.ipynb
lab_1/: lab_1.ipynb
lab_2/: lab_2.ipynb
lab_3/: lab_3.ipynb
lab_4/: lab_4.ipynb
