[tool.poetry]
name = "idss-phd"
version = "0.1.0"
description = ""
authors = ["VSydorskyy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyterlab = "^4.1.8"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
ipdb = "^0.13.13"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
